Fix "No comments" padding
The comments closed box had messed up padding. This fixes it.

--- a/assets/scss/components/_content.scss
+++ b/assets/scss/components/_content.scss
@@ -179,6 +179,10 @@ h1.page-title {
 	margin  : 0;
 	padding : 40px 0;
 
+	.no-comments {
+		padding : 0 40px;
+	}
+
 	.avatar {
 		float   : left;
 		padding : 0 10px 10px 0;
